<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ant Colony Simulator</string>
    <string name="queenButton">todo</string>
    <string name="UnemployedAnts">Idle Ants:</string>
    <string name="b_i_t_e">B I T E</string>
    <string name="g_r_o_w">G R O W</string>
    <string name="l_i_f_t">L I F T</string>
    <string name="ToGROW">Idle Needed To Grow:</string>
    <string name="StrengthText">Current Strength:</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="settings">SETTINGS</string>
    <string name="lift_for_the_queen">LIFT FOR THE QUEEN</string>
    <string name="press_back_to_return">Press Back to return</string>
    <string name="todo">TODO</string>
    <string name="bite_for_the_queen">BITE FOR THE QUEEN!!!</string>
    <string name="settingsCog">⚙</string>
    <string name="upgradeArrow">⟰</string>
    <string name="bitevictorymessage">  </string>
    <string name="homeText">Ant Colony</string>
    <string name="loading">Presented by Pluto\'s Playground</string>
    <string name="strength">Strength: </string>
    <string name="colony_name">Queen\'s Colony</string>
    <string name="privacy_statement">Users’ privacy and trust are important to us at Pluto’s Playground. We aim to provide a trustworthy mobile application without in-app purchases or user accounts to ensure user security and privateness. No personally identifiable information is collected in any capacity, including financial and payment information, authentication information, phonebook, contacts, exact device location, SMS/call-related data, microphone, camera, and other sensitive device or usage data. This application will not handle financianial or payment information or government identification numbers and therefore will not need to disclose and personal information. This application will not handle non-public phonebook or contact information and therefore will not publish or disclose user’s contact information. Google Analytics is used to anonymously collect and analyze data to enhance the user experience. User data includes major characteristics such as regional location, number of users, demographic descriptors, and in-app event-based user engagement. Data will not be sold or transferred to any other party without the knowledge and permission of the user. Pluto’s playground shall adhere to users’ right to be informed and forgotten. </string>
    <string name="privacy">Privacy</string>
    <string name="privacy_Caps">PRIVACY</string>
    <string name="termsDescription">All contents, logo, and other visual media are the sole property of Pluto’s Playground. Pluto Playground is not responsible for third party redirects, particularly those of Google Ads. \n \n Source code for this application is available at https://github.com/aidanandrucyk/AntColonyMobileApp. While non-commercial use of the source or object code is permitted, commercial use of any description is strictly prohibited without the explicit consent of Pluto’s Playground. Users who fail to follow established guidelines will be barred from further usage in cases of abuse at Pluto’s Playgrounds sole discretion.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="credits">CREDITS</string>
    <string name="software_developers_aidan_andrucyk_and_sean_joo">Software Developers: \n  Aidan Andrucyk and Sean Joo</string>
    <string name="contact_us">Contact Us: \n plutosplaygroundstudios@gmail.com</string>
    <string name="music_bensound">Music: \n Bensound</string>
    <string name="inspiration_credits">Inspiration: \n A group where we all pretend to be ants in an ant colony</string>
    <string name="number_of_grows">Number of GROWs:</string>
    <string name="unsuccessful_lifts">Unsuccessful LIFTs:</string>
    <string name="total_ants">Total Ants:</string>
    <string name="colony_glory_score">Colony Glory Score:</string>
    <string name="sean_pls_make_this_colony_name_in_all_caps_lol">Queen\'s Colony</string>
    <string name="tier">Tier:</string>
    <string name="tier_upgrade_requirements">TIER UPGRADE REQUIREMENTS</string>
    <string name="territories_needed">Territories Needed:</string>
    <string name="upgrade_colony">UPGRADE COLONY</string>
    <string name="colony_stats">COLONY STATS</string>
    <string name="idle_ants">Idle Ants:</string>
    <string name="colony_strength">Colony Strength:</string>
    <string name="territories_owned">Territories Owned:</string>
    <string name="bite_defeats">BITE Defeats:</string>
    <string name="successful_lifts">Successful LIFTs:</string>
    <string name="music">Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="how_to_play">How To Play</string>
    <string name="creditsInSettings">Credits</string>
    <string name="rate_us">Rate Us!</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="back">back</string>
    <string name="lift_for_queen">LIFT FOR QUEEN</string>
    <string name="okay">Okay</string>
    <string name="bite_for_queen">BITE FOR QUEEN</string>
    <string name="share">Share!</string>
    <string name="visit_us">Visit Us!</string>
    <string name="language_button">Language</string>
    <string name="select_lang">Select Language</string>
    <string name="tier1">Tribal Village</string>
    <string name="tier2">Burgeoning Estate</string>
    <string name="tier3">Humble County</string>
    <string name="tier4">Blessed Duchy</string>
    <string name="tier5">Glorious Queendom</string>
    <string name="tier6">Divine Empire</string>
    <string name="tier7append">Glorious </string>
    <string name="lang">en</string>
    <string name="bite_report"> change in ants</string>
    <string name="bite_description_good">After several sun cycles of battle, both sides incurred grave losses. To verbally express it was a tug of war would be an understatement. It was only in the final push that it became pellucid that our Queen’s colony were the victors of such an engagement. Battles of such heated natures shall bring glory to our queendom!</string>
    <string name="bite_description_bad">Outnumbered and outmaneuvered, our noble ants have been truncated to meager numbers. Those noble souls may be lost but they are not forgotten. Anon we shall exact our vengeance upon the mound of innoble ants!</string>
    <string name="lift_report"> change in ants</string>
    <string name="lift_description_good">The aphids have graced us with sweet honeydew!</string>
    <string name="how_to_play_description">"There are five major game player interactions:
        \n Clicking on the queen: increases idle and total ants by strength factor at no cost
        \n Grow: increases the colony strength at the cost of idle ants
        \n Lift: large increase of idle and total ants at the cost of strength with 50% success rate
        \n Bite: risky huge change in idle/total ants and territories owned with success rate contingent on number of idle and total ants and random chance.
        \n Upgrade Colony: increases strength, colony tier, glory score, and colony aesthetics requiring (but not costing) territories claimed and number of grows."</string>
    <string name="totalAnts">Total Ants:</string>
    <string name="lift_description_bad">No humans are throwing away scraps!</string>
    <string name="good_job_upgrading_the_queen_thanks_you_for_your_work_keep_lifting_biting_and_growing_for_the_queen">Good job upgrading! The Queen thanks you for your work! Keep LIFTING, BITING, AND GROWING! FOR THE QUEEN!!!</string>
    <string name="upgraded">Upgraded!</string>
    <string name="now_tier">New Tier:</string>
    <string name="now_strength">New Strength:</string>
</resources>