<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UpgradeThankYou">

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upgraded"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/popupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40sp"
        android:text="@string/good_job_upgrading_the_queen_thanks_you_for_your_work_keep_lifting_biting_and_growing_for_the_queen"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nowTierText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/now_tier"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nowStrengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/now_strength"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/popupOkayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/okay" />
</LinearLayout>