<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Credits">

    <EditText
        android:id="@+id/creditsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/credits"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/developersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/software_developers_aidan_andrucyk_and_sean_joo"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/musicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/music_bensound"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inspirationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/inspiration_credits"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/contactUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/contact_us"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/okay" />


</LinearLayout>