<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/termsOfUseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/abeezee"
        android:text="@string/terms_conditions"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/termsOfUseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:padding="25sp"
        android:text="@string/termsDescription"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/termsOfUseBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="false"
        android:text="@string/okay" />

</LinearLayout>