<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BE1D24C"
    android:contentDescription="@string/settings"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/StaticAnts"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/totalAnts"
        android:textColor="#000000"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/AntCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AntCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/AntCount"
        android:textColor="#000000"
        android:textSize="36sp"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/StaticUnemployed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticAnts"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/StaticUnemployed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/UnemployedAnts"
        android:textColor="#000000"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/UnemployedCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AntCount" />

    <TextView
        android:id="@+id/UnemployedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/UnemployedCount"
        android:textColor="#000000"
        android:textSize="36sp"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/queen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticUnemployed" />

    <ImageButton
        android:id="@+id/queen"
        android:layout_width="204dp"
        android:layout_height="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/queenButton"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/toGrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UnemployedCount"
        app:srcCompat="@drawable/unnamed" />

    <TextView
        android:id="@+id/toGrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ToGROW"
        android:textColor="#020000"
        app:autoSizeMaxTextSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/numberToGrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/queen" />

    <TextView
        android:id="@+id/numberToGrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/NeededToGrow"
        android:textColor="#020000"
        app:autoSizeMaxTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/growButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toGrow" />

    <Button
        android:id="@+id/growButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/pressed_button"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#000000"
        android:text="@string/g_r_o_w"
        android:textColor="#000201"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toStartOf="@+id/liftButton"
        app:layout_constraintStart_toEndOf="@+id/biteButton"
        app:layout_constraintTop_toBottomOf="@id/numberToGrow" />

    <Button
        android:id="@+id/liftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/pressed_button"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#000000"
        android:text="@string/l_i_f_t"
        android:textColor="#000201"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/growButton"
        app:layout_constraintTop_toBottomOf="@id/numberToGrow" />

    <Button
        android:id="@+id/biteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/pressed_button"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#000000"
        android:text="@string/b_i_t_e"
        android:textColor="#000201"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toStartOf="@+id/growButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberToGrow" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/growButton" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="516dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/liftButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StaticAnts"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>